# esp-csi

./: .gitlab-ci.yml  README.md  README_cn.md
examples/: README.md  README_cn.md
examples/esp-radar/wifi_sensing_demo/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/esp-radar/wifi_sensing_demo/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml  led_control.c  led_control.h  web_serial_monitor.c  web_serial_monitor.h
examples/esp-radar/wifi_sensing_demo/tools/: web_serial_monitor.html
examples/get-started/csi_recv/main/: app_main.c
examples/get-started/csi_recv_router/main/: app_main.c
examples/get-started/tools/: csi_viewer.html
